# serializer-example

./: .gitignore  README.md  docker-compose.yml  requests-example.http
server/: clean-database.sh  clean-database.sql  db.sqlite3  magic.py  marshmallow_viewset.py  node.py  pyproject.toml  services.py
server/inspections/: models.py  views.py
server/inspections/migrations/: 0001_initial.py  0002_initial.py
server/lib/: README.md  drfnode.py  magic.py  marshmallow_viewset.py  node.py  providers.py  schema_container.py  service.py
server/lib/services/: billing.py  email.py
server/properties/: models.py  views.py
server/properties/migrations/: 0001_initial.py
server/propertymanager/: apps.py  managers.py  models.py  services.py  views.py
server/propertymanager/management/commands/: resetdb.py
server/propertymanager/migrations/: 0001_initial.py  0002_inspectionitem_detail.py
server/server/: settings.py  urls.py
server/tests/: test_service.py
server/users/: models.py  views.py
server/users/migrations/: 0001_initial.py
